...
                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                    <color key="backgroundColor" red="0.99215686270000003" green="0.99215686270000003" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                </view>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HvQ-QH-w1a">
                    <rect key="frame" x="12" y="12" width="351" height="643"/>
                    <subviews>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2U9-yQ-JVF" customClass="MultiSwitchViewContainer" customModule="ChargeBack" customModuleProvider="target">
                            <rect key="frame" x="0.0" y="142" width="351" height="200"/>
                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="200" id="05r-Io-Xcw"/>
                            </constraints>
                        </view>
...
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uBr-88-acf">
                            <rect key="frame" x="175.5" y="583" width="175.5" height="60"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="60" id="h3R-7c-NUT"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
                            <state key="normal" title="CONTESTAR"/>
                            <connections>
                                <action selector="didClickOnContinueButton:" destination="-1" eventType="touchUpInside" id="VKi-DK-lLA"/>
                            </connections>
                        </button>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S3L-F9-zEO">
                            <rect key="frame" x="0.0" y="0.0" width="351" height="76"/>
...
