...
}

extension EndpointRequester {

    func doGet(mockedFileName: String? = nil) {
        var fileName = mockedFileName
        if let stubEndpointsVar = ProcessInfo.processInfo.environment["stub_endpoints"] {
            if stubEndpointsVar == "true" {
                fileName = action.mockedFile()
            }
        }
        if let forceFail = ProcessInfo.processInfo.environment["force_failing"] {
            if forceFail == "true" {
...
