...
                            <rect key="frame" x="0.0" y="261" width="351" height="90"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="90" id="TZ5-hw-rAC"/>
                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="90" id="vyd-mT-PMm"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                            <state key="normal" title="FECHAR"/>
                            <connections>
                                <action selector="didClickOnCloseButton:" destination="-1" eventType="touchUpInside" id="e8E-qd-YRL"/>
                            </connections>
                        </button>
                    </subviews>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
